--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>lombok</artifactId>
             <version>1.16.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.automation-remarks</groupId>
+            <artifactId>video-recorder-junit</artifactId>
+            <version>1.6</version>
+        </dependency>
     </dependencies>
 
 </project>
